  . Fixed leak in Enum::from/tryFrom for internal enums when using JIT (ilutov)
  . Fixed calling internal methods with a static return type from
    extension code. (Sara)
  . Fixed bug GH-8655 (Casting an object to array does not unwrap refcount=1
    references). (Nicolas Grekas)
  . Fixed potential use after free in php_binary_init(). (Heiko Weber)

- CLI:
  . Fixed GH-8827 (Intentionally closing std handles no longer possible). (cmb)

- COM:
  . Fixed bug GH-8778 (Integer arithmethic with large number variants fails).
    (cmb)

- Curl:
  . Fixed CURLOPT_TLSAUTH_TYPE is not treated as a string option. (Pierrick)

- Date:
  . Fixed bug #72963 (Null-byte injection in CreateFromFormat and related
    functions). (Derick)
  . Fixed bug #74671 (DST timezone abbreviation has incorrect offset). (Derick)
  . Fixed bug #77243 (Weekdays are calculated incorrectly for negative years).
    (Derick)
  . Fixed bug #78139 (timezone_open accepts invalid timezone string argument).
    (Derick)

- GD:
  . Fixed imagecreatefromavif() memory leak. (cmb)

- FPM:
  . Fixed bug #67764 (fpm: syslog.ident don't work). (Jakub Zelenka)

- MBString:
  . mb_detect_encoding recognizes all letters in Czech alphabet (alexdowad)
  . mb_detect_encoding recognizes all letters in Hungarian alphabet (alexdowad)
  . Fixed bug GH-8685 (pcre not ready at mbstring startup). (Remi)
  . Backwards-compatible mappings for 0x5C/0x7E in Shift-JIS are restored,
    after they had been changed in 8.1.0. (Alex Dowad)

- ODBC:
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- OPcache:
  . Fixed bug GH-8591 (tracing JIT crash after private instance method change).
    (Arnaud, Dmitry, Oleg Stepanischev)

- OpenSSL:
  . Fixed bug #50293 (Several openssl functions ignore the VCWD).
    (Jakub Zelenka, cmb)
  . Fixed bug #81713 (NULL byte injection in several OpenSSL functions working
    with certificates). (Jakub Zelenka)

- PDO_ODBC: