@@ -21,11 +21,10 @@ $appendProp2 = (function() {
     $this->prop[] = 1;
 })->bindTo($test, Test::class);
 $appendProp2();
-$appendProp2();
 ?>
 --EXPECTF--
-Fatal error: Uncaught Error: Cannot modify readonly property Test::$prop in %sfetch_obj_006.php:13
+Fatal error: Uncaught Error: Cannot indirectly modify readonly property Test::$prop in %s:%d
 Stack trace:
-#0 %sfetch_obj_006.php(16): Test->{closure}()
+#0 %sfetch_obj_006.php(15): Test->{closure}()
 #1 {main}
   thrown in %sfetch_obj_006.php on line 13
